# Hermes-Language-learning-Assist

./: .env.example  .gitignore  .hermes.md  AGENTS.md  LICENSE  PRD.MD  README.md  main.py  pyproject.toml
config/: config.yaml
docs/: hermes-agent-manual.md
plugins/: __init__.py
plugins/init/: __init__.py  daily_push.py  data_manager.py  init.py  llm_client.py  plugin.yaml  spaced_repetition.py
plugins/learning_log/: __init__.py  plugin.yaml
plugins/learning_plan/: __init__.py  plugin.yaml
plugins/review_scheduler/: __init__.py  plugin.yaml
plugins/user_profile/: __init__.py  plugin.yaml
scripts/: __init__.py  dev_agent.py  run_gateway.py
skills/: SKILL_MASTER.md
skills/active_review/: SKILL.md
skills/daily_learning/: SKILL.md
skills/init/: SKILL.md
skills/learning_kb/: generate_custom_plan.py  generate_kb.py  kb_principles.md  knowledge_base.json
tests/: test_full_flow.py  test_full_flow_result.md
