[project]
name = "my-agent-project"
version = "0.1.0"
description = "Hermes Agent 自定义开发项目"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai",
    "hermes-agent @ git+https://github.com/NousResearch/Hermes-Agent.git@v2026.4.23",
    "qrcode>=8.2",
    "uvicorn>=0.47.0",
]


